--- a/public/test.html
+++ b/public/test.html
@@ -1,23 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>会议屏幕共享Demo</title>
+    <style type="text/css">
+        html, body {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0;
+        }
+
+        #videos {
+            position: absolute;
+            left: 30%;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            overflow: auto;
+        }
+
+        #videos video {
+            display: inline-block;
+            width: 32%;
+        }
+
+        #chat {
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            width: 30%;
+            border: 1px solid #0f0f0f;
+        }
+        #chat .msgIpt, #chat .fileIpt{
+            position: absolute;
+            left: 0;
+            width: 80%;
+        }
+        #chat .sendBtn, #chat .sendFileBtn {
+            position: absolute;
+            left: 80%;
+            width: 20%;
+        }
+        #chat .msgIpt,#chat .sendBtn {
+            bottom: 0;
+        }
+        #chat .fileIpt, #chat .sendFileBtn {
+            bottom: 30px;
+        }
+
+        #chat .msgs {
+            padding: 5%;
+        }
+        #chat .msgs p{
+            margin: 0.3em 0;
+        }
+        #files {
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 20%;
+        }
+        #files .name {
+        }
+        #files .percent {
+            font-weight: bold;
+            text-decoration: none
+        }
+    </style>
 </head>
 <body>
-<video id="video"></video>
+<div id="chat">
+    <div class="msgs" id="msgs"></div>
+    <input type="file" id="fileIpt" class="fileIpt">
+    <button id="sendFileBtn" class="sendFileBtn">发送文件</button>
+    <input type="text" id="msgIpt" class="msgIpt">
+    <button id="sendBtn" class="sendBtn">发送</button>
+</div>
+<div id="videos">
+    <video id="main" autoplay></video>
+</div>
+<div id="files">
+</div>
 </body>
-<script type="text/javascript">
-    // Prefer camera resolution nearest to 1280x720.
-    var constraints = { video: { mediaSource:"screen",width: 1920, height: 1080 } };
-    var p = navigator.mediaDevices.getUserMedia(constraints);
-        p.then(function(mediaStream) {
-            var video = document.querySelector('video');
-            video.srcObject = mediaStream;
-            video.onloadedmetadata = function(e) {
-                video.play();
-            };
-        })
-        .catch(function(err) { console.log(err.name + ": " + err.message); }); // always check for errors at the end.
-</script>
+<script type="text/javascript" src="/SkyRTC-client.js"></script>
+<script type="text/javascript" src="/rtcUse.js"></script>
 </html>
