添加屏幕共享demo

--- a/public/test.html
+++ b/public/test.html
@@ -80,7 +80,7 @@
     <button id="sendBtn" class="sendBtn">发送</button>
 </div>
 <div id="videos">
-    <video id="main" autoplay></video>
+    <video id="me" autoplay></video>
 </div>
 <div id="files">
 </div>
