--- a/public/socketTest.html
+++ b/public/socketTest.html
@@ -14,7 +14,7 @@
 
         #videos {
             position: absolute;
-            left: 30%;
+            left: 0;
             top: 0;
             bottom: 0;
             right: 0;
@@ -23,7 +23,14 @@
 
         #videos video {
             display: inline-block;
-            width: 32%;
+            width: 60%;
+        }
+        .other{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            top:0;
         }
 
         #chat {
@@ -31,7 +38,7 @@
             left: 0;
             top: 0;
             bottom: 0;
-            width: 30%;
+            width: 15%;
             border: 1px solid #0f0f0f;
         }
         #chat .msgIpt, #chat .fileIpt{
@@ -72,43 +79,44 @@
     </style>
 </head>
 <body>
-<div id="chat">
-    <div class="msgs" id="msgs"></div>
-    <input type="text" id="msgIpt" class="msgIpt">
-    <button id="sendBtn" class="sendBtn">发送</button>
-</div>
 <div id="videos">
     <video id="me" autoplay></video>
-</div>
-<div id="files">
 </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js"></script>
 <script>
-    var socket = io.connect('https://localhost:3001/');
+    //var path = window.location.href.substring(window.location.protocol.length);
+    var path = "123.206.123.213:3001";
+    var socket = io.connect(path);
+
     var options = {video: { mediaSource:"screen", width: 1920, height: 1080 }};
     getUserMedia = navigator.mediaDevices.getUserMedia(options);
     var canvas = document.createElement("canvas");
+    canvas.setAttribute("width",1920);
+    canvas.setAttribute("height",1080);
     var ctx=canvas.getContext('2d');
     if(getUserMedia) {
         getUserMedia.then(function (stream) {
             document.getElementById('me').src = URL.createObjectURL(stream);
             document.getElementById('me').play();
-            window.setInterval(upload,50);
+            window.setInterval(upload,10);
         })
     }
 
     socket.on('broadcast', function (data) {
         if(data.id != socket.id) {
+            console.log("接收数据");
             var image = new Image();
             image.onload = function () {
                 var newVideo = document.getElementById("other-" + data.id);
                 if(newVideo == null) {
                     newVideo = document.createElement("canvas");
                     newVideo.setAttribute("id","other-" + data.id);
+                    newVideo.setAttribute("width",1920);
+                    newVideo.setAttribute("height",1080);
                 }
                 newVideo.setAttribute("class", "other");
-                newVideo.getContext('2d').drawImage(image,0,0);
+                newVideo.getContext('2d').drawImage(image,0,0,1920,1080);
                 videos.appendChild(newVideo);
             };
             image.src = data.data;
@@ -117,11 +125,11 @@
     socket.on('user disconnected',function (data) {
         var e = document.getElementById('other-' + data);
         if(e){
-            e.parentNode.removeChild(video);
+            e.parentNode.removeChild(e);
         }
     });
     function upload() {
-        ctx.drawImage(document.getElementById('me'), 0, 0, 200, 150);
+        ctx.drawImage(document.getElementById('me'), 0, 0, 1920, 1080);
         socket.emit("upload_success",{
             data:canvas.toDataURL('image/png'),
             id:socket.id
