--- a/public/client/webrtc_example.html
+++ b/public/client/webrtc_example.html
@@ -22,7 +22,7 @@
             </div>
             <div id="video-container">
                 <video id="self_view" class="shadow owr-overlay-video" autoplay muted></video>
-                <video id="remote_view" class="shadow owr-overlay-video" autoplay></video>
+                <video id="remoteView" class="shadow owr-overlay-video" autoplay></video>
             </div><!----这个地方是放视频的---->
             <div id="chat_div"></div>
             <div id="chat-container">
